--- a/home.css
+++ b/home.css
@@ -172,8 +172,10 @@ body {
 }
 
 p {
-	font-size: 1.5vw;
+	font-size: 120%;
 	padding: 2%;
+	min-height: 91,2%;
+	max-height: 91,2%;	
 }
 #start > a {
 	color: #1c1c1c;
