--- a/home.css
+++ b/home.css
@@ -172,11 +172,10 @@ body {
 }
 
 p {
-	font-size: 120%;
-	padding: 2%;
-	min-height: 91,2%;
-	max-height: 91,2%;	
+	padding: 2%;	
+	font-size: 1.5vw;
 }
+
 #start > a {
 	color: #1c1c1c;
 }
